# datastructures

./: README.md  pyproject.toml  setup.cfg
datastructures/: binary_search_tree.py  linkedlist.py  queue.py  stack.py
tests/: conftest.py  test_binary_search_tree.py  test_linkedlist.py  test_queue.py  test_stack.py
