[tool.poetry]
name = "datastructures"
version = "0.1.0"
description = ""
authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
